--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,9 @@ build/Release
 node_modules
 jspm_packages
 
-# Optional npm cache directory
+# npm
 .npm
+package-lock.json
 
 # Optional REPL history
 .node_repl_history
