Fixed geojson schema. Fixed unit tests. Updated geojson-places dependency. Fixed vscode launch in dev mode.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
       "type": "node",
       "request": "launch",
       "name": "geojson-places-api: localhost",
-      "runtimeExecutable": "fastify",
-      "args": ["start", "-w", "-l", "info", "-P", "app.js"],
+      "runtimeExecutable": "npx",
+      "args": ["fastify", "start", "-w", "-l", "info", "-P", "app.js"],
       "restart": true,
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
